@@ -1,3 +1,4 @@
+	* support IPv6 traffic class (via the TOS setting)
 	* made uTP re-enter slow-start after time-out
 	* fixed uTP upload performance issue
 	* fix missing support for DHT put salt
